25/12/2024
- Fixed Spelling Mistake In Articulated Dilophosaurus Fossil
- Fixed Alphabetic Order In Creative Mode Tab (Mammoth Before Moa)
- Fixed Spelling Mistake In Skull Lantern
17/12/2024
- Fixed Server Crash
15/12/2024 C
- (Really) Fixed Skeleton Crash
15/12/2024 B
- Fixed Skeleton Crash
15/12/2024 A
- Non-Legacy Futabasaurus Now Articulates Entire Neck
- Tamed Tyrannosaurus No Longer Breaks Blocks
- Replaced Nether Coin With Ice Age Coin
- Stone Tablets Are Now Data-Driven
- Brachiosaurus Now Walks Slower
- "NoAI" Tagged Dinosaurs No Longer Tick As Much
- Renamed "#fossilslegacy:piglin_taming_helmets" to "#fossilslegacy:piglin_taming_armor"
- Trimed Ancient and Scarab Gem Armors Now Show Trims
- Mammoth Now Grows In Stages
- Smilodon Now Grows In Stages
- Dodo Now Grows In Stages
- Jurassic Fern Now Tints To Biome Leaves Color
- Updated Nautilus Model To No Longer Float
- Updated JEI Plugin To New JEI System - Minimal Differences Client-Side
- Javelin Now Does 2 More Damage
- Debug Items No Longer All Called "Debug Item" With Type In Description, Now Called It In Name
- Fossils No Longer Drop Things When Killed In Creative Mode
- Updated Brachiosaurs Model
- Updated Cryolophosaurus Model
- Fossil No Longer Places Fossils
- Archaeology Workbench Changed Recipe
- Updated Pteranodon Model
- Pteranodon flying is more stable
- Updated Smilodon Model
- Updated Mammoth Model
- Updated Stegosaurus Model
- Updated Mosasaurus Model
- Updated Tyrannosaurus Model
- Updated Therizinosaurus Model
- Carnivourus Dinosaurs Now Use Tags To Target Animals; Fixes Cannibalism And Other Attacks
- Updated Goal Order: Dinosaurs Will Not Fight Back More Than Before
- Moved "Sink" Key To "Dinosaur Ridding" Category
- Magic Conch Uses Entity Type Tag Instead Of Only Futabasaurus
- (Fabric) Fixed Server Crash
- Fixed Placing Stone Tables
- Fixed Cannibalism
- Fixed Bounding Boxes
- Fixed Frozen Meat's Attack Damage
- Fixed Bucket Pickup On Mod Cauldron