@@ -1,2 +1,2 @@
-// 1.21.1	2024-12-25T15:50:59.6607002	Languages: en_us for mod: fossilslegacy
-673eeaa2cdee9b0db5502bc988e4fca32adae4ea assets/fossilslegacy/lang/en_us.json
+// 1.21.1	2025-01-08T20:54:01.5305013	Languages: en_us for mod: fossilslegacy
+5d10507a1af39f42141ed0ddd37cc1d8cace6aba assets/fossilslegacy/lang/en_us.json
