@@ -372,6 +372,9 @@
   "fossil_variant.fossilslegacy.triceratops": "Triceratops",
   "fossil_variant.fossilslegacy.tyrannosaurus": "Tyrannosaurus",
   "fossil_variant.fossilslegacy.velociraptor": "Velociraptor",
+  "gamerule.doAnimalBlockBreaking": "Do animals break blocks",
+  "gamerule.doAnimalGrowth": "Do animals grow",
+  "gamerule.doAnimalHunger": "Do animals get hungry",
   "gui.jei.category.registry.coat_types": "Coat Types",
   "gui.jei.category.tagInformation.coat_types": "Coat Types",
   "item.fossilslegacy.ancient_axe": "Ancient Axe",
