@@ -1,7 +1,0 @@
-package willatendo.fossilslegacy.server.config;
-
-public class FossilsLegacyBaseConfigSettings {
-    public static final boolean WILL_ANIMALS_STARVE = true;
-    public static final boolean WILL_ANIMALS_BREAK_BLOCKS = true;
-    public static final boolean WILL_ANIMALS_GROW = true;
-}
